Fixed horizontal overflow issue,increase description font size

--- a/src/App.css
+++ b/src/App.css
@@ -8,5 +8,4 @@ body {
     font-family: "Quicksand", sans-serif;
     font-optical-sizing: auto;
     scroll-behavior: smooth;
-    overflow-x: hidden;
   }
